breezy-debian (2.8.23) UNRELEASED; urgency=medium

  * Convert copyright file to machine-readable format.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 Jan 2019 19:17:53 +0000

breezy-debian (2.8.22) unstable; urgency=medium

  * Set Enhances: brz.
  * Fix compatibility with newer snapshots of Breezy.
  * Trim trailing whitespace.
  * Remove unnecessary XS-Testsuite field in debian/control.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 25 Nov 2018 13:46:55 +0000

breezy-debian (2.8.21) unstable; urgency=medium

  * Support finding upstream revisions based on bzr revno.
  * Fix error when attempting to release from branch without colocated
    branch support.
  * brz dep3-patch: Use git commit ids when generating patches from Git
    repositories.
  * Fix compatibility with newer versions of brz.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 17 Nov 2018 02:10:53 +0000

breezy-debian (2.8.20) unstable; urgency=medium

  * Add 'brz debrelease' command.
  * Fix autopgktests; use Python 3 dependencies.
  * Fix test_merge_upstream.ChangelogAddNewVersionTests.test_add_new
    when run with non-ascii username and LC_ALL=C.
  * Hide the mark-uploaded command.
  * Support tag names starting with debian/ or ubuntu/, for
    compatibility with git-buildpackage.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 20 Oct 2018 22:57:16 +0000

breezy-debian (2.8.16) unstable; urgency=medium

  * Properly escape slashes in git branch names.
  * Add dgit: directory.
  * Cope with Dgit headers without location.
  * Drop outdated X-Python-Version header.
  * Update to run with Python 3 version of Breezy.
  * Switch to pybuild.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 14 Sep 2018 14:41:09 +0100

breezy-debian (2.8.15) unstable; urgency=medium

  * Guess upstream tag names if none is explicitly set.
  * Support retrieving/storing pristine-tar deltas in git branches.
  * Simplify handling of apt: URLs.
  * Display resolved branch URL in apt: directory.